--- a/w2/insta/index.html
+++ b/w2/insta/index.html
@@ -14,7 +14,7 @@
             <div class="reg_form">
                 <img class="instagram_ph" src="img/ins_txt.jpg">
                 <p>Зарегистрируйтесь, чтобы смотреть фото и видео ваших друзей.</p>
-                <button><a href="https://www.facebook.com/login/device-based/regular/login/?login_attempt=1&lwv=110" target="_blank"><text id="text1">Войти через Facebook</text></a></button>
+                <button><img src="img/instagram.png" id="btn_img"><a href="https://www.facebook.com/login/device-based/regular/login/?login_attempt=1&lwv=110" target="_blank"><text id="text1">Войти через Facebook</text></a></button>
                 <p>——————&nbsp&nbsp<text id="hrr">ИЛИ</text>&nbsp&nbsp——————</p>
                 <form action="" method="POST">
                     <input class="lines" type="text" id="mobN" name="mobN" placeholder="Моб. телефон или эл. адрес" required>
